spec/error_match_arm_mismatch.expected
spec/error_match_arm_mismatch.kex:3:3: error: Match arm type mismatch: expected String but arm returns Integer
Aborted: fix type errors before running (use --no-check to skip).
