spec/error_match_arm_mismatch.kex
# Match arms that return incompatible types are a compile-time error.
let describe(n) do
  match n do
    0 -> "zero"
    _ -> 99
  end
end
main do
  IO.printLine(describe(0))
end
